0422,添加管理员删除整个组织的功能